--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,24 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#5e6ad2" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Sreeja Chakraborty - Full Stack Developer, Sports Aficionado, and Music Explorer. Portfolio showcasing web development projects, sports achievements, and music collaborations."
     />
+    <meta name="keywords" content="Full Stack Developer, Web Development, React, Node.js, Portfolio, Swimming Trainer, Table Tennis, Music, Ghorchara Music" />
+    <meta name="author" content="Sreeja Chakraborty" />
+    <meta property="og:title" content="Sreeja Chakraborty | Full Stack Developer" />
+    <meta property="og:description" content="Portfolio showcasing web development projects, sports achievements, and music collaborations." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sreejachakraborty.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <title>Sreeja Chakraborty | Full Stack Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
